# pycaer

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: wheels.yml
examples/: aedat_reader.py  read.py  read_aedat.py  read_davis.py  test_performance.py
include/: aedat.hpp
include/flatbuffers/: events_generated.h  file_data_table_generated.h  frame_generated.h  imus_generated.h  ioheader_generated.h  trigger_generated.h
src/: aedat.cpp  davis.cpp  main.cpp
tests/: test_basic.py
